// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop "
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={100}
      createdAt={0}
      description="abc"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={200}
      createdAt={345600000}
      description="def"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={300}
      createdAt={-345600000}
      description="cat food"
      id="3"
      key="3"
      note="some note"
    />
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 2`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop "
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <p>
        No expenses to display.
      </p>
    </div>
  </div>
</div>
`;
